--- a/package.json
+++ b/package.json
@@ -41,14 +41,18 @@
   },
   "homepage": "https://github.com/flarebyte/creative-semantic-store#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^4.1.6",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.0",
+    "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.24.0",
     "coveralls": "^2.11.4",
     "dependency-check": "^2.5.1",
     "doctoc": "^0.15.0",
-    "eslint": "^1.10.1",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "isparta": "^4.0.0",
     "rimraf": "^2.4.2",
     "tap-spec": "^4.1.1",
