--- a/package.json
+++ b/package.json
@@ -58,5 +58,10 @@
     "tap-spec": "^4.1.1",
     "tape": "^4.2.2",
     "watch": "^0.16.0"
+  },
+  "dependencies": {
+    "joi": "^10.2.2",
+    "lodash": "^4.17.4",
+    "n3": "^0.9.1"
   }
 }
