Parse n triples for category

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "joi": "^10.2.2",
     "lodash": "^4.17.4",
-    "n3": "^0.9.1"
+    "n3": "^0.9.1",
+    "string": "^3.3.3"
   }
 }
