--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "scripts": {
     "clean": "rimraf dist",
     "lint": "eslint src test",
-    "check": "npm run lint -s && dependency-check package.json --entry src",
+    "check": "npm run lint -s",
+    "deps-check": "dependency-check package.json --entry src",
     "watch": "watch 'npm run build' src test",
     "test": "babel-node test/index.js | tspec",
     "prebuild": "npm run check -s && npm run clean -s",
-    "build": "babel --optional runtime src -d dist",
+    "build": "babel src -d dist",
     "postbuild": "npm run test -s",
     "coverage": "babel-node node_modules/isparta/bin/isparta cover test/index.js",
     "coveralls": "npm run coverage -s && coveralls < coverage/lcov.info",
@@ -41,10 +42,11 @@
   },
   "homepage": "https://github.com/flarebyte/creative-semantic-store#readme",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.0",
+    "babel-cli": "^6.24.0",
     "babel-eslint": "^7.2.0",
     "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2016": "^6.22.0",
+    "babel-preset-latest": "^6.24.0",
     "coveralls": "^2.11.4",
     "dependency-check": "^2.5.1",
     "doctoc": "^0.15.0",
